Revert "OP-991 launch menu search box is no longer cut off in ie"
This reverts commit 2df7a144a7b37c8183f7038c3f4618fe15ace7c8.

--- a/web-app/themes/common/stylesheets/_widgetLauncher.scss
+++ b/web-app/themes/common/stylesheets/_widgetLauncher.scss
@@ -163,7 +163,6 @@
         background: $widget-launcher-search-background-color;
         @include border-radius(15px);
         //width: 400px;
-        padding-top: 2px;
         input{
             color: $widget-launcher-widget-text-color;
         }
@@ -184,13 +183,11 @@
         filter: none;
         border-style: none;
         padding: 0px ;
-        padding-bottom: 5px;
         .x-box-inner{
             background: transparent;
             filter: none;
             border-style: none;
         }
-        
     }
 	
 	.x-window-header {
